--- a/data/playbooks/templates/role_readme.md.j2
+++ b/data/playbooks/templates/role_readme.md.j2
@@ -1,5 +1,27 @@
 # {{ collection_name }} / {{ role.name }} 
-{{ role.description }}
+{{ role.description }}  
+  
+{% if role.supports_multi %}Note : This role supports multi / looping{% endif %}
+
+{% if role.filters | length > 0 %}
+## Custom Filters
+
+| Module | Description | Version History |
+| :----- | :---------- | :-------------- |
+{% for f in role.filters %}| {{ f.name }} | {{ f.description | default('No description') }} | {{ f.version_history | default('No version history') }} |
+{% endfor %}
+{% endif %}
+
+{% if role.modules | length > 0 %}
+## Custom Modules
+
+| Module | Description | Version History |
+| :----- | :---------- | :-------------- |
+{% for module in role.modules %}| {{ module.name }} | {{ module.description | default('No description') }} | {{ module.version_history | default('No version history') }} |
+{% endfor %}
+{% endif %}
+
+## Role actions/qtasks
 
 | Subrole | Description |
 | :------ | :---------- |
