--- a/data/playbooks/templates/role_template/tasks/facts_multi.yml.j2
+++ b/data/playbooks/templates/role_template/tasks/facts_multi.yml.j2
@@ -3,5 +3,5 @@
 ## Naming facts
 - name: Merge Extravars
   ansible.builtin.set_fact:
-    {{ role_name }}s : "{|{ '{{ role_name }}s' | merge_lists(d=vars_defautls,t=vars_templates,v=vars_local,required_keys=['name'],c=qtask_child) }|}"
+    {{ role_name }}s : "{|{ '{{ role_name }}s' | merge_lists(d=vars_defaults,t=vars_templates,v=vars_local,required_keys=['name'],c=qtask_child) }|}"
 
